# test_task

./: .gitignore  README.md
convert_number/: CMakeLists.txt  main.cpp
duplicate_deletion/: CMakeLists.txt  main.cpp
serialization_deserialization/: CMakeLists.txt
serialization_deserialization/common/: message_recording.hpp
serialization_deserialization/source/: list.cpp  list.hpp  list_node.cpp  list_node.hpp  main.cpp
